# edutice-kiosk

./: CMakeLists.txt  KioskButton.qml  config.cpp  config.h  inactivity-filter.cpp  inactivity-filter.h  main.cpp  main.qml  process.cpp  process.h  qml.qrc
qml/: InactivityTimer.qml  KioskButton.qml  KioskDialog.qml  KioskDialogButton.qml  KioskProgressBar.qml  main.qml
qml/AvenirFonts/: AvenirFont.qml  AvenirFonts.qml  qmldir
